# anomaly-detect

./: Dockerfile  docker-compose.yml  pyproject.toml  setup_docker_dns.sh
app/alerts/: aggregator.py
app/analysis/: contribution.py  correlation.py  granger.py  root_cause.py
app/api/: app.py  models.py  tasks.py
app/dashboard/: app.py  components.py
app/detection/: base.py  ensemble.py  granularity.py  ml.py  statistical.py
app/ingestion/: parser.py
app/labeling/: loop.py
app/model_registry/: __init__.py  models.py  registry.py  retrain_engine.py  training_pipeline.py
app/pattern/: library.py
app/scheduler/: engine.py  models.py
app/storage/: database.py
