[project]
name = "anomaly-detect"
version = "1.0.0"
description = "Time series anomaly detection and root cause analysis platform"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.35.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=12.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pyarrow>=16.0.0",
    "scikit-learn>=1.5.0",
    "statsmodels>=0.14.0",
    "prophet>=1.1.5",
    "torch>=2.3.0",
    "dtw-python>=1.4.0",
    "ruptures>=1.1.9",
    "scipy>=1.13.0",
    "networkx>=3.3.0",
    "pyvis>=0.3.2",
    "plotly>=5.22.0",
    "streamlit-agraph>=0.0.45",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "aiosqlite>=0.20.0",
]

[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
